Fix top spacing above right sidebar headings
Covers troupe/gitter-webapp#1008

--- a/public/less/trp3Vars.less
+++ b/public/less/trp3Vars.less
@@ -10,7 +10,7 @@
 @retina: ~"(min-device-pixel-ratio: 2)";
 
 @mobile-header-height: 50px;
-@desktop-header-height: 65px;
+@desktop-header-height: 75px;
 @menu-footer-height: @desktop-header-height;
 
 @menu-panel-mobile-width:  100vw;
